--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    background-color: rgb(28, 28, 62);
+}
+
+* {
+    color: rgb(196, 187, 175);
+    justify-content: center;
+    text-align: center;
+    text-transform: capitalize;
+}
